--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>課題008</title>
+    <title>８章課題</title>
+    <!-- このページは８章の課題です。 -->
   </head>
   <body>
     <header>
@@ -17,63 +18,73 @@
       </nav>
     </header>
     <main>
-      <h2>社会</h2>
-      <h3>和菓子店も「トリックアトリート！」</h3>
-      <p>
-        日本でも年々人気の高まるハロウィン。<br />今年は大手和菓子店５社がハロウィン向けの和菓子セットを共同開発しました。
-      </p>
-      <audio src="ichi (1).mp3" controls></audio>
-      <h3>私のおすすめ和菓子アンケートフォーム</h3>
-      <form action="">
-        <label for="">氏名</label>
-        <input type="text" placeholder="名前を入力してください" />
-        <br />
-        <label for="">年代</label>
-        <select>
-          <option value="">10代以下</option>
-          <option value="">20代</option>
-          <option value="">30代</option>
-          <option value="">40代</option>
-          <option value="">50代</option>
-          <option value="">60代以上</option>
-        </select>
-        <br />
-        <label for="">男性</label>
-        <input type="radio" name="gender" id="" />
-        <label for="">女性</label>
-        <input type="radio" name="gender" id="" />
-        <label for="">その他</label>
-        <input type="radio" name="gender" id="" />
-        <br />
-        <label for="">おすすめ和菓子の名称</label>
-        <input type="text" />
-        <br />
-        <label for="">おすすめの理由</label>
-        <textarea></textarea>
-        <br />
-        <label for="">個人情報保護方針に同意する</label>
-        <input type="checkbox" />
-        <br />
-        <input type="submit" value="送信" />
-        <input type="reset" value="リセット" />
-      </form>
-      <h2>テクノロジー</h2>
-      <h3>SUMURAIが新しい動画をリリース</h3>
-      <p>
-        SUMURAI公式YouTubeで新しい動画がリリースされました。<br />動画内容はHTML/CSSの解説です。
-      </p>
-      <iframe
-        width="868"
-        height="488"
-        src="https://www.youtube.com/embed/2JLiGSUohEo"
-        title="【必須で見るべき】HTML/CSSとは？それぞれの特徴をわかりやすく解説!"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
+      <article>
+        <section>
+          <h2>社会</h2>
+          <h3>和菓子店も「トリックアトリート！」</h3>
+          <p>
+            日本でも年々人気の高まるハロウィン。<br />今年は大手和菓子店５社がハロウィン向けの和菓子セットを共同開発しました。
+          </p>
+          <audio src="ichi (1).mp3" controls></audio>
+        </section>
+        <section>
+          <h3>私のおすすめ和菓子アンケートフォーム</h3>
+          <form action="">
+            <label for="">氏名</label>
+            <input type="text" placeholder="名前を入力してください" />
+            <br />
+            <label for="">年代</label>
+            <select>
+              <option value="">10代以下</option>
+              <option value="">20代</option>
+              <option value="">30代</option>
+              <option value="">40代</option>
+              <option value="">50代</option>
+              <option value="">60代以上</option>
+            </select>
+            <br />
+            <label for="">男性</label>
+            <input type="radio" name="gender" id="" />
+            <label for="">女性</label>
+            <input type="radio" name="gender" id="" />
+            <label for="">その他</label>
+            <input type="radio" name="gender" id="" />
+            <br />
+            <label for="">おすすめ和菓子の名称</label>
+            <input type="text" />
+            <br />
+            <label for="">おすすめの理由</label>
+            <textarea></textarea>
+            <br />
+            <label for="">個人情報保護方針に同意する</label>
+            <input type="checkbox" />
+            <br />
+            <input type="submit" value="送信" />
+            <input type="reset" value="リセット" />
+          </form>
+        </section>
+        <section>
+          <h2>テクノロジー</h2>
+          <h3>SUMURAIが新しい動画をリリース</h3>
+          <p>
+            SUMURAI公式YouTubeで新しい動画がリリースされました。<br />動画内容はHTML/CSSの解説です。
+          </p>
+          <iframe
+            width="868"
+            height="488"
+            src="https://www.youtube.com/embed/2JLiGSUohEo"
+            title="【必須で見るべき】HTML/CSSとは？それぞれの特徴をわかりやすく解説!"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </section>
+      </article>
     </main>
     <footer>
       <p>&copy; SUMURAIニュース</p>
     </footer>
   </body>
 </html>
+
+     
